Updated contract & react app

--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>NFT Hero Names</title>
-    <meta name="title" content="NFT Hero Names" />
+    <title>NFT Words to Live</title>
+    <meta name="title" content="NFT Words to Live" />
     <meta name="description" content="Checkout My NFT Hero Collection built with _buildspace!" />
 
     <!-- Facebook -->
